--- a/styles/styles.css
+++ b/styles/styles.css
@@ -73,6 +73,7 @@ p {
     padding: 0px 4vw;
     margin: 0px auto;
     border: 2px solid red;
+    box-sizing: border-box;
 }
 
 /* header */
@@ -124,4 +125,53 @@ p {
 
 .footer-main .icon {
     margin-left: 1rem;
+}
+
+.article-body.wrapper {
+    padding: 2rem 8vw 6rem;
+}
+
+.article-info {
+    display: flex;
+    align-items: center;
+}
+
+.article-info img {
+    border-radius: 50%;
+    margin-right: 1vw;
+    border: 1px solid white;
+}
+
+.article-info a {
+    text-decoration: none;
+    color: white;
+    margin-right: 3vw;
+}
+
+.article-info a:hover {
+    text-decoration: underline;
+}
+
+.article-info time {
+    color: white;
+}
+
+.article-header .wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.article-header .category {
+    order: -1;
+}
+
+.article-header {
+    padding: 8rem 0px 3rem;
+    background: black url('../assets/icons/header.jpg') center center no-repeat;
+    background-size: cover;
+}
+
+.article-header h1 {
+    color: white;
 }
