--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,7 +3,6 @@
 /**
 fonts and typography 
 **/
-@import url('https://fonts.googleapis.com/css2?family=Heebo:wght@100;200;300;400;500;600;700;800;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Heebo:wght@100;200;300;400;500;600;700;800;900&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap');
 
 
@@ -37,6 +36,14 @@ p {
     line-height: 1.4;
 }
 
+a {
+    color: #4C54A0;
+    text-decoration: none;
+}
+a:hover {
+    text-decoration: underline;
+}
+
 /* common elements */
 .nav-horizontal {
     display: flex;
@@ -50,13 +57,20 @@ p {
     text-decoration: none;
 }
 
-.category {
+.category, .button{
     display: inline-block;
     background-color: #4c54a0;
     border-radius: 4px;
     color: white;
     text-decoration: none;
     padding: 0.3rem 0.7rem;
+}
+
+.button {
+    border: none;
+    font-size: 100%;
+    padding: 0.8rem 1rem;
+    font-family: 'Heebo', sans-serif;
 }
 
 .icon {
@@ -72,7 +86,7 @@ p {
     max-width: 1100px;
     padding: 0px 4vw;
     margin: 0px auto;
-    border: 2px solid red;
+    /* border: 2px solid red; */
     box-sizing: border-box;
 }
 
@@ -174,4 +188,96 @@ p {
 
 .article-header h1 {
     color: white;
+}
+
+.landing-content {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    row-gap: 1rem;
+    column-gap: 1rem;
+    margin-bottom: 4rem;
+}
+
+.card-list {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: repeat(4, auto);
+    grid-gap: 1.5rem;
+}
+
+.card-list-header {
+    grid-row: 1 / 2;
+    grid-column: 1 / 3;
+}
+
+.card-list .button {
+    grid-column: -2 /-1;
+    align-items: end;
+    justify-self: center;
+    margin-top: 4rem;
+}
+
+.card {
+    background-color: white;
+    box-shadow: 0px 0px 3px grey;
+}
+.card header div {
+    display: flex;
+    justify-content: space-between;
+    order: -1;
+    line-height: 1.5rem;
+}
+
+.card img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+
+.card header {
+    display: flex;
+    flex-direction: column;
+}
+
+
+.card-info {
+    padding: 1rem;
+}
+
+.card-big {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    column-gap: 1rem;
+    margin: 2rem 0px;
+}
+
+.landing-content aside {
+    margin-top: 7.1rem;
+}
+
+.newsletter {
+    padding: 1rem;
+    color: white;
+    text-align: center;
+    background-color: #4C5FA0;
+}
+
+.newsletter button {
+    background-color:#0d0f20 ;
+}
+
+.newsletter form {
+    display: flex;
+    margin-bottom: 1rem;
+}
+
+.newsletter input {
+    border: none;
+    width: 100%;
+    border-radius: 4px 0px 0px 4px;
+}
+
+
+.newsletter .text-small {
+    font-size: 0.8rem;
 }
