--- a/styles/styles.css
+++ b/styles/styles.css
@@ -229,7 +229,7 @@ a:hover {
 }
 
 .card img {
-    object-fit: cover;
+    object-fit: fill;
     width: 100%;
     height: 100%;
 }
@@ -247,9 +247,10 @@ a:hover {
 .card-big {
     display: grid;
     grid-template-columns: 2fr 1fr;
-    column-gap: 1rem;
+    column-gap: 2rem;
     margin: 2rem 0px;
 }
+
 
 .landing-content aside {
     margin-top: 7.1rem;
